# qrcode-wifi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example_run.py
src/wifiqrcode_gen/: generator.py
tests/: test_generator.py
